--- a/index.html
+++ b/index.html
@@ -693,6 +693,11 @@
     </div>
 </footer>
 
+<script src="./vendor/jquery/dist/jquery.min.js"></script>
+<script src="./vendor/popper.js/dist/umd/popper.min.js"></script>
+<script src="./vendor/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="./vendor/headroom.js/dist/headroom.min.js"></script>
+
 
 <!-- Neumorphism JS -->
 <script src="./assets/js/neumorphism.js"></script>
