--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
                     <div class="container herobg card bg-primary shadow-soft border-light p-4">
                         <div class="row justify-content-md-around">
                             <div class="col-12 col-md-6 col-lg-5 mb-5 mb-lg-0">
-                                <div class="col-md-12">
-                                    <h1 class="display-1">Care Link</h1>
+                                <div class="col-md-12 ">
+                                    <h1 class="display-1 neumorphic-text">Care Link</h1>
                                     <h1 class="display-4">Experience the future of healthcare at your fingertips.
                                         Discover personalized wellness solutions and expert care that empowers you to
                                         live your best life.</h1>
                                     <div class="pt-4">
-                                        <button class="btn btn-primary" type="button">
+                                        <button class="btn shadow-inset btn-primary" type="button">
                                             Contact Us
                                             <span class="ml-1"><span class="far fa-comments mr-2"></span></span>
                                         </button>
@@ -97,7 +97,8 @@
                                 </div>
                             </div>
                             <div class="col-12 col-md-6 col-lg-5 mb-5 mb-lg-0">
-                                <div class="card bg-primary cardbg p-10 ">
+                                <div class="card bg-primary shadow-inset cardbg p-sm-4 p-md-8 p-lg-10">
+                                    <!-- <img class="shadow-soft rounded scale" src="../assets/img/7.jpg" alt="Sign up page preview"> -->
                                 </div>
                             </div>
                         </div>
